Development
    Don't place files on recent list if running in plugin mode
    Implement chapter seeking and detection in mkv files, depends on patch submitted to mplayer
        Patch: http://lists.mplayerhq.hu/pipermail/mplayer-dev-eng/2008-September/058567.html
    Add recently opened files to the File Menu under Open Recent
    When running in replace and play mode, replace on first song on playlist and add others
    Add command line option, --replace_and_play that switches single instance mode into single item mode
    Updated Turkish translation
    Keep blank items from appearing in Subtitle and Audio language menus
    Add new menu Edit->Select Audio Language, should work on DVD and mkv files
    Add new menu Edit->Select Subtitle Language, this menu is populated with data from the mkv files for subtitle selection
    New preference in the GUI to set the default startup volume
    Only allow view angle menu item when video is present
    Fix bug, where audio file was being parsed as a playlist when running in single instance mode
    When adding items to the single instance playlist, handle all items passed in, including all items in playlist
    Ignore single instance preference when running in embedded mode
    When in single instance mode and you start a second player with a filename, 
        the filename is added to the playlist of the first instance 
        so now you can select a bunch of files in Nautilus and say open in gnome-mplayer
        and all the files are opened in a single instance
    Added preference --new_instance, to override single_instance
    Made single instance a new preference on Advanced Tab
    Made show details a new preference on Advanced Tab
    Made new option --showdetails
    Fix resize issues with details and playlist open
    German translation by 25Hertz
    When mouse is over progress bar, show tooltip showing media time where the mouse is
    Menu button being shown in realplayer mode, hide it.
    Minor cleanups