@@ -620,10 +620,10 @@ gboolean playlist_select_callback(GtkTreeView * view, GtkTreePath * path,
         if (state == QUIT) {
             play_file(filename, playlist);
         } else {
-			gtk_container_forall(GTK_CONTAINER(menu_edit_sub_langs),remove_langs,NULL);
-			gtk_widget_set_sensitive(GTK_WIDGET(menuitem_edit_select_sub_lang),FALSE);
-			gtk_container_forall(GTK_CONTAINER(menu_edit_audio_langs),remove_langs,NULL);
-			gtk_widget_set_sensitive(GTK_WIDGET(menuitem_edit_select_audio_lang),FALSE);
+            gtk_container_forall(GTK_CONTAINER(menu_edit_sub_langs), remove_langs, NULL);
+            gtk_widget_set_sensitive(GTK_WIDGET(menuitem_edit_select_sub_lang), FALSE);
+            gtk_container_forall(GTK_CONTAINER(menu_edit_audio_langs), remove_langs, NULL);
+            gtk_widget_set_sensitive(GTK_WIDGET(menuitem_edit_select_audio_lang), FALSE);
             cmd = g_strdup_printf("loadfile \"%s\"\n", filename);
             send_command(cmd);
             g_free(cmd);
